[package]
name = "tunnl"
version = "0.1.0"
edition = "2021"

[dependencies]
# SSH protocol
russh = "0.48"
russh-keys = "0.48"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Async utilities
async-trait = "0.1"

# Random number generation (for key generation)
rand = "0.8"
rand_core = "0.6"

[dev-dependencies]
# Testing
tokio-test = "0.4"
