[package]
name = "tunnl"
version = "0.1.0"
edition = "2021"

[dependencies]
# SSH protocol
russh = "0.48"
russh-keys = "0.48"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Async utilities
async-trait = "0.1"

# Random number generation (for key generation)
rand = "0.8"
rand_core = "0.6"

# HTTP server for proxy layer
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
